--- a/index.html
+++ b/index.html
@@ -169,19 +169,24 @@
                   <button class="directions__filter-btn" type="button" data-filter="all">All</button>
                 </li>
                 <li class="directions__filter-item">
-                  <button class="directions__filter-btn" type="button" data-filter=".directions__list-item--marketing">Marketing</button>
+                  <button class="directions__filter-btn" type="button"
+                    data-filter=".directions__list-item--marketing">Marketing</button>
                 </li>
                 <li class="directions__filter-item">
-                  <button class="directions__filter-btn" type="button" data-filter=".directions__list-item--management">Management</button>
+                  <button class="directions__filter-btn" type="button"
+                    data-filter=".directions__list-item--management">Management</button>
                 </li>
                 <li class="directions__filter-item">
-                  <button class="directions__filter-btn" type="button" data-filter=".directions__list-item--hr">HR & Recruting</button>
+                  <button class="directions__filter-btn" type="button" data-filter=".directions__list-item--hr">HR &
+                    Recruting</button>
                 </li>
                 <li class="directions__filter-item">
-                  <button class="directions__filter-btn" type="button" data-filter=".directions__list-item--design">Design</button>
+                  <button class="directions__filter-btn" type="button"
+                    data-filter=".directions__list-item--design">Design</button>
                 </li>
                 <li class="directions__filter-item">
-                  <button class="directions__filter-btn" type="button" data-filter=".directions__list-item--development">Development</button>
+                  <button class="directions__filter-btn" type="button"
+                    data-filter=".directions__list-item--development">Development</button>
                 </li>
               </ul>
               <ul class="directions__list">
@@ -200,7 +205,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="mix directions__list-item directions__list-item--management"  data-order="2">
+                <li class="mix directions__list-item directions__list-item--management" data-order="2">
                   <a class="directions__list-link" href="#">
                     <div class="directions__image-box">
                       <img src="images/directions/2.jpg" alt="">
@@ -215,7 +220,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="mix directions__list-item directions__list-item--hr"  data-order="3">
+                <li class="mix directions__list-item directions__list-item--hr" data-order="3">
                   <a class="directions__list-link" href="#">
                     <div class="directions__image-box">
                       <img src="images/directions/3.jpg" alt="">
@@ -265,6 +270,28 @@
                 </li>
               </ul>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="certificate">
+        <div class="container">
+          <div class="certificate__inner">
+            <div class="certificate__content">
+              <div class="certificate__heading heading">
+                <p class="heading__subtitle">Createx Certificate</p>
+                <h2 class="heading__title">Your expertise will be confirmed</h2>
+              </div>
+              <div class="certificate__text">
+                <p class="certificate__paragraph">We are accredited by international professional organizations and
+                  institutes:</p>
+              </div>
+              <div class="certificate__img-box">
+                <img src="images/logos/1.svg" alt="">
+                <img src="images/logos/2.svg" alt="">
+                <img src="images/logos/3.svg" alt="">
+              </div>
+            </div>
+            <div class="certificate__image" ><img src="images/award.jpg" alt=""></div>
           </div>
         </div>
       </section>
