--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="about">
+      <section class="main__about aboutt">
         <div class="container">
           <div class="about__inner">
             <div class="about__createx">
@@ -156,7 +156,7 @@
           </div>
         </div>
       </section>
-      <section class="directions">
+      <section class="main__directions directions">
         <div class="container">
           <div class="directions__inner">
             <div class="directions__heading heading">
@@ -273,28 +273,33 @@
           </div>
         </div>
       </section>
-      <section class="certificate">
+      <section class="main__cert cert">
         <div class="container">
-          <div class="certificate__inner">
-            <div class="certificate__content">
-              <div class="certificate__heading heading">
-                <p class="heading__subtitle">Createx Certificate</p>
+          <div class="cert__inner">
+            <div class="cert__content">
+              <div class="cert__heading heading">
+                <p class="heading__subtitle">Createx cert</p>
                 <h2 class="heading__title">Your expertise will be confirmed</h2>
               </div>
-              <div class="certificate__text">
-                <p class="certificate__paragraph">We are accredited by international professional organizations and
-                  institutes:</p>
-              </div>
-              <div class="certificate__img-box">
-                <img src="images/logos/1.svg" alt="">
-                <img src="images/logos/2.svg" alt="">
-                <img src="images/logos/3.svg" alt="">
-              </div>
+              <p class="cert__text">We are accredited by international professional organizations and
+                institutes:</p>
+              <ul class="cert__logos">
+                <li class="cert__logos-item">
+                  <img src="images/logos/1.svg" alt="">
+                </li>
+                <li class="cert__logos-item">
+                  <img src="images/logos/2.svg" alt="">
+                </li>
+                <li class="cert__logos-item">
+                  <img src="images/logos/3.svg" alt="">
+                </li>
+              </ul>
             </div>
-            <div class="certificate__image" ><img src="images/award.jpg" alt=""></div>
+            <div class="cert__image-box"><img src="images/award.jpg" alt="Сертификат"></div>
           </div>
         </div>
       </section>
+      <section class="main__team team"></section>
     </main>
     <footer class="footer"></footer>
   </div>
